Bug 131211 - [CSSRegions] Region's behaviour not updated when becoming valid from invalid
Summary: [CSSRegions] Region's behaviour not updated when becoming valid from invalid
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mihnea Ovidenie
URL:
Keywords:
Depends on:
Blocks: 57312
  Show dependency treegraph
 
Reported: 2014-04-03 23:02 PDT by Mihnea Ovidenie
Modified: 2014-04-04 08:06 PDT (History)
5 users (show)

See Also:


Attachments
Patch (13.27 KB, patch)
2014-04-03 23:41 PDT, Mihnea Ovidenie
no flags Details | Formatted Diff | Diff
Patch for landing (13.78 KB, patch)
2014-04-04 07:29 PDT, Mihnea Ovidenie
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mihnea Ovidenie 2014-04-03 23:02:50 PDT
When a region becomes valid again from invalid - it was part of a dependency cycle but the dependency cycle was broken - it needs to behave like a valid region - autoheight, region styling.
Comment 1 Mihnea Ovidenie 2014-04-03 23:41:02 PDT
Created attachment 228579 [details]
Patch
Comment 2 Andrei Bucur 2014-04-04 00:19:07 PDT
Comment on attachment 228579 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=228579&action=review

r=me

> Source/WebCore/rendering/RenderNamedFlowFragment.cpp:80
>      // If the region is not attached to any thread, there is no need to check

You should consider removing this comment.

> Source/WebCore/rendering/RenderNamedFlowFragment.cpp:-511
> -    if (documentBeingDestroyed() || !m_flowThread)

Let's make a patch that removes the m_flowThread nullification as well. The isValid() check should be enough.
Comment 3 Mihnea Ovidenie 2014-04-04 07:29:00 PDT
Created attachment 228590 [details]
Patch for landing
Comment 4 WebKit Commit Bot 2014-04-04 08:06:09 PDT
Comment on attachment 228590 [details]
Patch for landing

Clearing flags on attachment: 228590

Committed r166781: <http://trac.webkit.org/changeset/166781>
Comment 5 WebKit Commit Bot 2014-04-04 08:06:13 PDT
All reviewed patches have been landed.  Closing bug.